Rewritten page content, added own placeholder pictures, modified css

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
  * Copyright 2011-2019 The Bootstrap Authors
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ * Background pattern from Toptal Subtle Patterns
  */
 :root {
   --blue: #007bff;
@@ -64,7 +65,7 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible; }
+  overflow: visible;  }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -91,8 +92,11 @@ ol,
 ul,
 dl {
   margin-top: 0;
+  padding:0;
   margin-bottom: 1rem; }
-
+li {
+	list-style-type: none;
+}
 ol ol,
 ul ul,
 ol ul,
@@ -345,7 +349,7 @@ h6, .h6 {
 
 hr {
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   border: 0;
   border-top: 0.125rem solid rgba(0, 0, 0, 0.1); }
 
@@ -4702,7 +4706,9 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #A13941 !important; }
+/*	background-image:url("skewed_red.png");*/
+  background-color: #A13941 !important;
+  }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4710,7 +4716,8 @@ button.bg-primary:focus {
   background-color: #7b2c32 !important; }
 
 .bg-secondary {
-  background-color: #233a5c !important; }
+  background-image: url('bluenavy_wash_wall.png') !important;
+/*  background-color: #233a5c !important;*/ }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
@@ -7181,7 +7188,8 @@ h3 {
     line-height: 2.5rem; } }
 
 .divider-custom {
-  margin: 1.25rem 0 1.5rem;
+  margin: 0 0 1rem;
+  /*margin: 1.25rem 0 1.5rem;*/
   width: 100%;
   display: flex;
   justify-content: center;
@@ -7384,6 +7392,10 @@ form .row:first-child .floating-label-form-group {
 
 #brandImage {
   height: 2rem; }
+
+.bg-whitepattern {
+  background-image:url("whitediamond.png");
+}
 
 .portfolio {
   padding-top: 6rem;
