--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,24 @@ pre {
 	width:100%;
 	height:100%;
 }
+/*
+.video-container {
+	max-width: 420px;
+	margin: 0px auto;
+}
+.video-container > div {
+	position: relative;
+	padding-bottom: 75%;
+	height:0px;
+}
+.video-container iframe {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width:100%;
+	hieght: 100%;
+}
+*/
 
 .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
   width: 100%;
@@ -7206,6 +7224,14 @@ h3 {
   .page-section .page-section-heading {
     font-size: 3rem;
     line-height: 2.5rem; } }
+
+.header-custom-line {
+    width: 100%;
+    height: 0.25rem;
+    background-color: #233a5c;
+    border-radius: 1rem;
+    border-color: #233a5c !important;
+}
 
 .divider-custom {
   margin: 0 0 1rem;
