Changed tools list style image to svg version but it isn't any more high quality for some reason

--- a/css/styles.css
+++ b/css/styles.css
@@ -938,7 +938,7 @@ pre {
     max-width: 50%; } 
 
 .tool-list {
-	list-style-image: url("../img/icon/white-star.png");
+	list-style-image: url("../img/icon/white-star.svg");
 	list-style-position: inside;}
 
 @media (min-width: 992px) {
