--- a/css/styles.css
+++ b/css/styles.css
@@ -486,6 +486,14 @@ pre {
   .container {
     max-width: 1140px; } }
 
+.project-link {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: initial;
+}
+
 .project-section {
   background-color: #172436 !important;
   border-radius: 0.5rem;
