More readable about me section

--- a/css/styles.css
+++ b/css/styles.css
@@ -607,7 +607,9 @@ pre {
     max-width: 1140px; } }
 
 .about-intro {
-	padding: 0 1.5rem 0 1.5rem;
+	padding: .75rem .75rem .75rem .75rem;
+
+	background-color: hsl(0 20% 5% / 0.125);
 }
 
 .row {
