Tweaks on About page. Changed icon on Student Projects. Minor editing on CV

--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,7 @@ pre {
 .about-intro {
 	padding: .75rem .75rem .75rem .75rem;
 
-	background-color: hsl(0 20% 5% / 0.2);
+	background-color: hsl(355.43deg 47.42% 38.04%);
 }
 
 .gist-embed {
